Safari css about right side z-index bug fixed by making bodyWrapper > overflow:hidden

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -66,6 +66,7 @@
   }
   #aboutFoundation, #aboutImages, #aboutText{
     transform: rotateY(45deg) rotate(-3deg);
+    -webkit-transform : rotateY(45deg) rotate(-3deg);
     transition: ease-out 3s;
     -webkit-transition: ease-in-out 3s;
     -moz-transition: ease-in-out 3s;
