--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -142,4 +142,5 @@ body {
 #bodyWrapper {
   position: relative;
   top: 80px;
+  overflow:hidden;
 }
